# boc-exchange-rate

./: .gitignore  LICENSE  README.md  manifest.config.ts  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  desktop.yml
desktop/: README.md  index.html  package-lock.json  package.json  settings.html  tsconfig.json  vite.config.ts
desktop/src/: alerts.ts  app.css  chart.ts  converter.ts  globals.d.ts  history.ts  i18n.ts  main.ts  platform.ts  settings-store.ts  settings.ts  trend.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs
public/_locales/de/: messages.json
public/_locales/en/: messages.json
public/_locales/es/: messages.json
public/_locales/fr/: messages.json
public/_locales/it/: messages.json
public/_locales/ja/: messages.json
public/_locales/ko/: messages.json
public/_locales/ru/: messages.json
public/_locales/zh_CN/: messages.json
public/_locales/zh_TW/: messages.json
src/background/: service-worker.ts
src/lib/: boc.ts  convert.test.ts  convert.ts  currencies.ts  format.test.ts  format.ts  history.test.ts  history.ts  storage.ts  theme.ts  trend.test.ts  trend.ts  types.ts
src/options/: index.html  options.css  options.ts
src/popup/: converter.ts  index.html  popup.css  popup.ts
website/: README.md  index.html  main.js  styles.css
